# gamedev

./: .gitignore  .travis.yml  README.md  bitbucket-pipelines.yml
experiments/01_01_eclipse/src/: main.cpp
experiments/01_02_make_lib/: CMakeLists.txt
experiments/01_02_make_lib/lib/include/: lib.hpp
experiments/01_02_make_lib/lib/src/: lib.cpp
experiments/01_eclipse/: .cproject  .project  CMakeLists.txt
experiments/01_eclipse/src/: CMakeLists.txt  main.cpp
experiments/02_01_sdl_dynamic/: CMakeLists.txt
experiments/02_make_lib/: CMakeLists.txt
experiments/02_make_lib/lib/: CMakeLists.txt
experiments/02_make_lib/lib/include/: lib.hpp
experiments/02_make_lib/lib/src/: lib.cpp
experiments/03_01_main_loop/: CMakeLists.txt  main.cpp
experiments/03_02_main_loop_to_engine/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp
experiments/03_03_engine_to_lib/: CMakeLists.txt  engine.hpp  main.cpp
experiments/04_01_opengl_min/: CMakeLists.txt  engine.cpp
experiments/04_02_opengl_triangle/: CMakeLists.txt  engine.cpp  engine.hpp  main.cpp  opengl_tris.cpp
experiments/extras/: README.md
tools/: README.md
